[workspace]
members = ["crates/*", "extensions/*"]
resolver = "3"

[workspace.dependencies]
scraper = "0.24.0"
once_cell = "1.20.1"
wasmtime = { version = "37.0", features = ["component-model"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
eyre = "0.6.12"
thiserror = "2.0.12"
ego-tree = "0.10.0"
url = "2.5.7"
regex = "1.11.3"
semver = "1.0.27"
serde_json = "1"
urlencoding = "2.1.3"

[workspace.dependencies.chrono]
version = "0.4.22"
default-features = false
features = ["clock", "iana-time-zone", "oldtime", "std", "serde"]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'unwind'
strip = 'debuginfo'
