[workspace]
members = ["crates/*", "extensions/*"]
resolver = "3"

[workspace.dependencies]
reqwest = { version = "0.13", features = ["multipart", "stream", "json"] }
scraper = "0.26.0"
once_cell = "1.20.1"
wasmtime = { version = "42.0", features = ["component-model"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
eyre = "0.6.12"
thiserror = "2.0.18"
ego-tree = "0.11.0"
url = "2.5.7"
regex = "1.11.3"
semver = "1.0.27"
serde = "1.0"
serde_json = "1"

# Protobuf related dependencies
prost = { version = "0.14.1", default-features = false, features = ["std"] }
prost-types = "0.14.1"
prost-build = "0.14.1"

ghostwire = "1"

[workspace.dependencies.chrono]
version = "0.4.22"
default-features = false
features = ["clock", "iana-time-zone", "oldtime", "std", "serde"]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'unwind'
strip = 'debuginfo'
