[package]
name = "quelle_http"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime.workspace = true
tracing.workspace = true
reqwest = { version = "0.12.2", features = ["multipart", "blocking"] }
