[package]
name = "extension_scribblehub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen-rt = { version = "0.33.0", features = ["bitflags"] }
scraper = { workspace = true }
chrono = { workspace = true }
once_cell = { workspace = true }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "quelle:extension"

[package.metadata.component.target]
path = "../wit"
world = "extension"

[package.metadata.component.target.dependencies]
"quelle:core" = { path = "../wit/deps/core" }
"quelle:http" = { path = "../wit/deps/http" }
