[package]
name = "quelle_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
aide = { workspace = true }
tokio = { workspace = true }
config = "0.15.22"
once_cell = { workspace = true }
tower-http = { version = "0.6.8", features = ["trace"] }
uuid = { version = "1.22.0", features = ["v4"] }
tracing-error = "0.2.1"
tracing-subscriber = { workspace = true, features = ["env-filter"] }
eyre = { workspace = true }
