[package]
name = "quelle_cli"
version = "0.1.0"
edition = "2024"

[features]
default = ["git", "pdf"]
git = ["quelle_store/git"]
pdf = ["quelle_export/pdf"]

[dependencies]
quelle_engine = { path = "../engine" }
quelle_store = { path = "../store", features = ["git"] }
quelle_storage = { path = "../storage" }
quelle_export = { path = "../export" }
quelle_dev = { path = "../dev" }


clap = { version = "4.5.48", features = ["derive"] }
directories = "5.0"
uuid = { version = "1.0", features = ["v4"] }
reqwest = { version = "0.12", features = ["stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

tracing.workspace = true
tracing-subscriber.workspace = true
eyre.workspace = true
url.workspace = true
tokio = { version = "1.0", features = ["full", "fs"] }

[dev-dependencies]
tempfile = "3.0"
