[package]
name = "quelle_cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "quelle"
path = "src/main.rs"

[features]
default = ["git", "github"]
git = ["quelle_store/git"]
github = ["quelle_store/github"]
pdf = ["quelle_export/pdf"]

[dependencies]
quelle_engine = { path = "../engine", features = ["cli"] }
quelle_store = { path = "../store", features = ["git", "github"] }
quelle_storage = { path = "../storage" }
quelle_export = { path = "../export" }
quelle_types = { path = "../types" }

clap = { version = "4.5.48", features = ["derive"] }
directories = "6.0"
uuid = { version = "1.0", features = ["v4"] }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
semver.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
eyre.workspace = true
url.workspace = true
tokio = { version = "1.0", features = ["full", "fs"] }
dashmap = "6.1.0"

[dev-dependencies]
tempfile = "3.0"
