[package]
name = "quelle_dev"
version = "0.1.0"
edition = "2024"

[dependencies]
quelle_engine = { path = "../engine" }

clap = { version = "4.5.48", features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["stream"] }
rustyline = "14.0"

tracing-subscriber.workspace = true
tracing.workspace = true
eyre.workspace = true
url.workspace = true
tokio = { version = "1.0", features = ["full", "fs"] }
notify = "6.0"

sha2 = "0.10"
async-trait = "0.1.80"

[dev-dependencies]
tempfile = "3.0"
tracing-subscriber = { workspace = true, features = ["env-filter"] }
