[package]
name = "quelle_engine"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime.workspace = true
reqwest = { version = "0.12.20", features = ["blocking", "multipart"] }
headless_chrome = "1.0.8"
async-trait = "0.1.80"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
base64 = "0.22.1"
clap = { version = "4.5.11", features = ["derive"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
thiserror.workspace = true
url = "2.5.4"
chrono.workspace = true
