[package]
name = "quelle_export"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
quelle_storage = { path = "../storage" }
async-trait = "0.1"
tokio = { version = "1.0", features = ["fs", "io-util", "process"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
eyre = "0.6"
log = "0.4"

# EPUB format dependencies
epub-builder = "0.7"

# PDF/Typst format dependencies
typst = "0.13"
typst-pdf = "0.13"
typst-assets = { version = "0.13", features = ["fonts"] }
comemo = "0.5"
regex = "1.0"

# HTML parsing
scraper = "0.18"



[dev-dependencies]
quelle_engine = { path = "../engine" }
tokio-test = "0.4"
tempfile = "3.0"
