[package]
name = "quelle_export"
version = "0.1.0"
edition = "2021"

[features]
default = ["epub"]
epub = []
pdf = ["dep:typst", "dep:typst-pdf", "dep:typst-assets", "dep:comemo", "dep:scraper"]

[dependencies]
# Core dependencies
quelle_storage = { path = "../storage" }
async-trait = "0.1"
tokio = { version = "1.0", features = ["fs", "io-util", "process"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
eyre = "0.6"
tracing = { workspace = true }

# EPUB format dependencies
epub-builder = "0.7"

# PDF/Typst format dependencies (optional)
typst = { version = "0.13", optional = true }
typst-pdf = { version = "0.13", optional = true }
typst-assets = { version = "0.13", features = ["fonts"], optional = true }
comemo = { version = "0.5", optional = true }
regex = "1.0"

# HTML parsing (optional, for PDF export)
scraper = { version = "0.18", optional = true }



[dev-dependencies]
quelle_engine = { path = "../engine" }
tokio-test = "0.4"
tempfile = "3.0"
