[package]
name = "quelle_extension"
version = "0.1.0"
edition = "2024"

[dependencies]
wit-bindgen = "0.42.1"
tracing.workspace = true
tracing-subscriber.workspace = true
eyre.workspace = true
scraper.workspace = true
ego-tree.workspace = true
chrono.workspace = true
thiserror.workspace = true
# Until new version of `parse_datetime` crate is published, we use a this version.
parse_datetime = { git = "https://github.com/uutils/parse_datetime", rev = "30cb26d75c237c43fb9a53dc2b66cb6745ab16c2" }
prost = { workspace = true, optional = true }

[features]
default = []
protobuf = ["dep:prost"]
