[package]
name = "quelle_storage"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["fs", "io-util", "macros", "rt"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.0"
serde_json = "1.0"
url = "2.5"
uuid = { version = "1.0", features = ["v4"] }

# Import WIT types from engine crate
quelle_engine = { path = "../engine" }
