[package]
name = "quelle_storage"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
eyre = "0.6"
serde = { workspace = true, features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.0", features = ["fs", "io-util", "macros", "rt", "sync"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.0"
serde_json = "1.0"
url = "2.5"
uuid = { version = "1.0", features = ["v4"] }
tracing.workspace = true

# Import domain types from types crate (no Wasmtime dependency)
quelle_types = { path = "../types" }
