[package]
name = "quelle_storage"
version = "0.1.0"
edition = "2024"

[dependencies]
quelle_types = { path = "../types" }

stowage = { version = "0.1", features = ['local'] }
async-trait = "0.1"
eyre = "0.6"
serde = { workspace = true, features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.0", features = ["fs", "io-util", "macros", "rt", "sync"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.0"
serde_json = "1.0"
url = "2.5"
tracing.workspace = true
tokio-postgres = { workspace = true, optional = true }
bb8 = { workspace = true, optional = true }
bb8-postgres = { workspace = true, optional = true }
tokio-postgres-rustls = { workspace = true, optional = true }
uuid = { workspace = true, features = ["serde"] }

[features]
default = ["postgres"]
postgres = ["dep:tokio-postgres", "dep:bb8", "dep:bb8-postgres", "dep:tokio-postgres-rustls"]
