[package]
name = "quelle_store"
version = "0.1.0"
edition = "2021"

[dependencies]
quelle_engine = { path = "../engine" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
blake3 = "1.5"
tempfile = "3.0"
tracing = "0.1"
semver = { version = "1.0", features = ["serde"] }
url = "2.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
walkdir = "2.0"
futures = "0.3"
directories = "6.0.0"
reqwest = { version = "0.11", features = ["json", "stream"], optional = true }
git2 = { version = "0.18", optional = true }
aws-sdk-s3 = { version = "1.0", optional = true }

[features]
default = ["local"]
local = []
git = ["dep:git2"]
http = ["dep:reqwest"]
s3 = ["dep:aws-sdk-s3"]
all = ["local", "git", "http", "s3"]
