[package]
name = "quelle_store"
version = "0.1.0"
edition = "2021"

[dependencies]
quelle_engine = { path = "../engine" }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
blake3 = "1.5"
tempfile = "3.0"
tracing = "0.1"
semver.workspace = true
url = "2.0"

walkdir = "2.0"
futures = "0.3"
directories = "6.0.0"
reqwest = { version = "0.11", features = ["json", "stream"], optional = true }
git2 = { version = "0.18", optional = true }

[features]
default = ["local", "git"]
local = []
git = ["dep:git2"]
http = ["dep:reqwest"]
github = ["dep:reqwest", "git"]
all = ["local", "git", "http", "github"]

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
