[package]
name = "quelle_store"
version = "0.1.0"
edition = "2024"

[dependencies]
quelle_engine = { path = "../engine" }
quelle_types = { path = "../types" }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
thiserror = "2.0"
semver.workspace = true
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
blake3 = "1.5"
tempfile = "3.0"
tracing = "0.1"
url = "2.0"
schemars = { workspace = true, optional = true }

walkdir = "2.0"
futures = "0.3"
directories = "6.0.0"
reqwest = { workspace = true, optional = true }
git2 = { version = "0.20", optional = true }

[features]
default = ["local", "git"]
local = []
git = ["dep:git2"]
http = ["dep:reqwest"]
github = ["dep:reqwest", "git"]
all = ["local", "git", "http", "github"]
schemars = ["dep:schemars", "quelle_types/schemars"]

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
