[package]
name = "quelle_types"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true, features = ["derive"] }
semver.workspace = true
chrono = { version = "0.4", features = ["serde"] }
schemars = { workspace = true, optional = true }

[features]
default = []
schemars = ["dep:schemars"]
