[package]
name = "extension_royalroad"
version = "0.1.0"
edition = "2024"

[dependencies]
quelle_extension = { path = "../../crates/extension" }
chrono = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true }
regex = "1.10"
eyre = { workspace = true }

[lib]
crate-type = ["cdylib"]
