[package]
name = "extension_scribblehub"
version = "0.1.0"
edition = "2024"

[dependencies]
quelle_extension = { path = "../../crates/extension" }
chrono = { workspace = true }
once_cell = { workspace = true }
tracing.workspace = true
eyre.workspace = true
urlencoding = "2.1"

[lib]
crate-type = ["cdylib"]
