[package]
name = "extension_wuxiaworld"
version = "0.1.0"
edition = "2021"

[dependencies]
quelle_extension = { path = "../../crates/extension", features = ["protobuf"] }
chrono = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true }
eyre = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true}
urlencoding = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[lib]
crate-type = ["cdylib"]

[build-dependencies]
prost-build = { workspace = true }
